--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     api 'com.braintreepayments.api:drop-in:4.5.0'
     api 'com.google.android.gms:play-services-wallet:+'
+    api 'com.braintreepayments.api:data-collector:3.+'
 }
 
 def getPackageName() {
